--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-top:20px;margin-bottom:20px;">
+<div class="container-fluid" style="margin-bottom:20px;">
   <div class="col-md-10 col-md-offset-1 card bg-white" style="display:block;position:relative;min-height:760px;padding-left:0px;margin-bottom:30px;">
 
     <div class="col-md-2 hidden-sm hidden-xs  bg-purple" style="position:absolute; height:100%;">
@@ -107,8 +107,8 @@
               <div ng-if="item">
                 <div class="row" style="padding-top:30px;">
                   <div class="col-md-3">
-                    <img style="width: 100%; height:100px;" class="img" ng-src="{{item.files[0].attachment}}" ng-if="item.files.length>0">
-                    <img style="width: 100%; height:100px;" class="img" src="/static/images/ecommerce.jpg" ng-if="item.files==null">
+                    <img style="width: 100%; height:150px;" class="img" ng-src="{{item.files[0].attachment}}" ng-if="item.files.length>0">
+                    <img style="width: 100%; height:150px;" class="img" src="/static/images/ecommerce.jpg" ng-if="item.files==null">
                   </div>
                   <div class="col-md-3" style="height:100px;">
                     <h5 ng-if="item.product.name.length>30" style="margin:0px;  height:50px;">{{item.product.name.slice(0,30)}}...</h5>
@@ -138,9 +138,9 @@
 
               <div ng-if="cartItems" ng-repeat="c in cartItems">
                 <div class="row" style="padding-top:30px;">
-                  <div class="col-md-3">
-                    <img style="width: 70%; height:100px;" class="img" ng-src="{{c.product.files[0].attachment}}" ng-if="c.product.files.length>0">
-                    <img style="width: 70%; height:100px;" class="img" src="/static/images/ecommerce.jpg" ng-if="c.product.files==null">
+                  <div class="col-md-3" style="overflow:hidden;">
+                    <img style="width: 70%;" class="img" ng-src="{{c.product.files[0].attachment}}" ng-if="c.product.files.length>0">
+                    <img style="width: 70%;" class="img" src="/static/images/ecommerce.jpg" ng-if="c.product.files==null">
                   </div>
                   <div class="col-md-3" style="height:100px;padding-top: 50px;">
                     <h5 ng-if="c.product.product.name.length>30" style="margin:0px;  height:50px;">{{c.product.product.name.slice(0,30)}}...</h5>
@@ -173,9 +173,9 @@
 
               <div ng-if="item">
                 <div class="row">
-                  <div class="col-xs-6">
-                    <img style="width: 100%; height:65px;" class="img" ng-src="{{item.files[0].attachment}}" ng-if="item.files.length>0">
-                    <img style="width: 100%; height:65px;" class="img" src="/static/images/ecommerce.jpg" ng-if="item.files==null">
+                  <div class="col-xs-6" style="overflow:hidden;">
+                    <img style="width: 100%;" class="img" ng-src="{{item.files[0].attachment}}" ng-if="item.files.length>0">
+                    <img style="width: 100%;" class="img" src="/static/images/ecommerce.jpg" ng-if="item.files==null">
                   </div>
                   <div class="col-xs-6">
                     <div class="row" style="padding:0px">
@@ -209,9 +209,9 @@
                 <div class="col-xs-12 col-sm-6">
 
                   <div class="row" style="padding-top:30px;">
-                    <div class="col-xs-6">
-                      <img style="width: 100%; height:65px;" class="img" ng-src="{{c.product.files[0].attachment}}" ng-if="c.product.files.length>0">
-                      <img style="width: 100%; height:65px;" class="img" src="/static/images/ecommerce.jpg" ng-if="c.product.files==null">
+                    <div class="col-xs-6" style="overflow:hidden;">
+                      <img style="width: 100%;" class="img" ng-src="{{c.product.files[0].attachment}}" ng-if="c.product.files.length>0">
+                      <img style="width: 100%;" class="img" src="/static/images/ecommerce.jpg" ng-if="c.product.files==null">
                     </div>
                     <div class="col-xs-6">
                       <div class="row" style="padding:0px">
@@ -296,9 +296,9 @@
         <!-- review page ends here  -->
         <div ng-if="data.stage == 'shippingDetails'">
           <div class="row">
-            <div class="col-md-8 col-md-offset-2 col-sm-offset-1  col-xs-offset-1  col-sm-10 col-xs-10" style="padding-left:55px" ng-if="savedAddress.length>0">
+            <div class="col-md-8 col-md-offset-2 col-sm-offset-1  col-xs-offset-1  col-sm-10 col-xs-10" style="padding-left:10px;" ng-if="savedAddress.length>0">
               <div class="row">
-                <div class="row card" style="margin-bottom:15px">
+                <div class="row card" style="margin-bottom:15px;padding-top:20px;">
                   <div class="col-md-6 col-xs-12 col-sm-6  text-center">
                     <h5>{{me.first_name}} {{me.last_name}}</h5>
                   </div>
@@ -365,7 +365,7 @@
                             </div>
                             <div class="col-md-6 col-xs-12 col-sm-6">
                               <div class="form-group">
-                                <input ng-model="data.address.country" type="text" class="form-control" id="country" placeholder="Enter Country..">
+                                <input ng-model="data.address.country" type="text" class="form-control" id="country" placeholder="Enter Country.." disabled>
                               </div>
                             </div>
                           </div>
@@ -398,7 +398,6 @@
                       <textarea ng-model="data.address.street" class="form-control" id="street" placeholder="Enter street.."></textarea>
                     </div>
                     <div class="form-group">
-
                       <input type="text" class="form-control" id="ldm" ng-model="data.address.landMark" placeholder="Enter Landmark..">
                     </div>
                     <div class="row">
@@ -422,7 +421,7 @@
                       </div>
                       <div class="col-md-5 col-xs-12 col-sm-6">
                         <div class="form-group">
-                          <input ng-model="data.address.country" type="text" class="form-control" id="country" placeholder="Enter Country..">
+                          <input ng-model="data.address.country" type="text" class="form-control" id="country" placeholder="Enter Country.." disabled>
                         </div>
                       </div>
                     </div>
