--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -6,9 +6,9 @@
         <div class="col-md-3 anim-in-out anim-zoom-out">
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : g.name})">
             <div class="row">
-              <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-                <img style="width: 100%;height:200px" class="img" ng-src="{{g.visual}}" ng-if="g.visual.length>0">
-                <img style="width: 100%;height:200px" class="img" src="/static/images/ecommerce.jpg" ng-if="g.visual==none">
+              <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;overflow:hidden;">
+                <img style="width: 100%;" class="img" ng-src="{{g.visual}}" ng-if="g.visual.length>0">
+                <img style="width: 100%;" class="img" src="/static/images/ecommerce.jpg" ng-if="g.visual==none">
               </div>
             </div>
             <div class="row" style="padding-top:5px;">
@@ -114,7 +114,7 @@
 <div class="row" style="margin:0px;" ng-if="me != null">
 
   <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding:20px; padding-top:0px;">
-    <div style="padding:10px;" class="row bg-white">
+    <div style="padding:10px;" class="row">
       <h4>Recently Viewed</h4>
       <div class="row">
         <div class="col-md-12">
