--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -111,15 +111,15 @@
     <div class="row" style="margin:0px;margin-top:10px;margin-bottom:5px;">
       <form>
 
-          <input ng-if="chatBox.fileToSend.size==0" type="text" class="col-md-9" ng-enter="send()" placeholder="Message" ng-model="chatBox.messageToSend" style="border:none;outline:none">
+          <input ng-if="chatBox.fileToSend.size==0" type="text" class="col-md-9" ng-enter="send()" placeholder="Message" ng-model="chatBox.messageToSend" style="border:none;outline:none;font-size:23px;height: 70px;background-color: #fff;">
           <!-- <span ng-if="chatBox.fileToSend.size==0" class="input-group-addon" ng-click="openEmoji()" style="cursor:pointer"><i class="fa fa-smile-o" aria-hidden="true"></i></span> -->
           <input type="file" id="filePickerChat{{index}}" style="display:none;" file-model="chatBox.fileToSend">
 
-          <span ng-if="chatBox.fileToSend.size==0" class="col-md-1" style="cursor:pointer;font-size:20px" ng-click="attachFile()" ><i class="fa fa-paperclip"  aria-hidden="true"></i></span>
-          <span ng-if="chatBox.fileToSend.size!=0" class="col-md-3" style="cursor:pointer;font-size:20px;padding:0px;text-align:center" > <i class="fa {{chatBox.fileToSend.name | fileTypeIcon }}"></i> </span>
-          <span ng-if="chatBox.fileToSend.size!=0" class="col-md-3" style="cursor:pointer;font-size:20px;padding:0px" > {{chatBox.fileToSend.name.slice(0,25)}} </span>
-          <span ng-if="chatBox.fileToSend.size!=0" class="col-md-3" style="cursor:pointer;font-size:20px;padding:0px;text-align:center" ng-click="removeFile()" > <i class="fa fa-times" aria-hidden="true"></i> </span>
-          <span class=" col-md-1" ng-click="send()" style="cursor:pointer;font-size:20px"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></span>
+          <span ng-if="chatBox.fileToSend.size==0" class="col-md-1" style="cursor:pointer;font-size:30px;padding:14px" ng-click="attachFile()" ><i class="fa fa-paperclip"  aria-hidden="true"></i></span>
+          <span ng-if="chatBox.fileToSend.size!=0" class="col-md-3" style="cursor:pointer;font-size:30px;padding:14px 0px;text-align:center" > <i class="fa {{chatBox.fileToSend.name | fileTypeIcon }}"></i> </span>
+          <span ng-if="chatBox.fileToSend.size!=0" class="col-md-3" style="cursor:pointer;font-size:30px;padding:14px 0px" > {{chatBox.fileToSend.name.slice(0,25)}} </span>
+          <span ng-if="chatBox.fileToSend.size!=0" class="col-md-3" style="cursor:pointer;font-size:30px;padding:14px 0px;text-align:center" ng-click="removeFile()" > <i class="fa fa-times" aria-hidden="true"></i> </span>
+          <span class=" col-md-1" ng-click="send()" style="cursor:pointer;font-size:30px;padding:14px"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></span>
         <!-- </div> -->
       </form>
     </div>
