--- a/homepage/static/ngTemplates/app.customer.dashboardGraph.html
+++ b/homepage/static/ngTemplates/app.customer.dashboardGraph.html
@@ -1,4 +1,4 @@
-<div class="card-body" style="color:white;background-color:#3e4247">
+<div class="card-body" style="background-color:#f8f8f8">
 
   <div class="row">
     <div class="col-sm-12">
@@ -7,7 +7,7 @@
   </div>
   <div class="row">
     <div class="col-sm-6 ">
-      <div class="container-fluid" style="background-color:#292a24;">
+      <div class="container-fluid" style="background-color:#fff;">
         <div class="row" style="padding:25px">
           <!-- <div class="row"> -->
             <div class="col-sm-9">
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="col-sm-6 ">
-      <div class="container-fluid" style="background-color:#292a24;">
+      <div class="container-fluid" style="background-color:#fff;">
         <div class="row" style="padding:25px">
           <!-- <div class="row"> -->
             <div class="col-sm-9">
@@ -50,7 +50,7 @@
           <!-- </div> -->
         </div>
       </div>
-      <div class="container-fluid" style="background-color:#292a24;margin-top:20px">
+      <div class="container-fluid" style="background-color:#fff;margin-top:20px">
         <div class="row" style="padding:25px">
           <!-- <div class="row"> -->
             <div class="col-sm-9">
@@ -78,7 +78,7 @@
   </div>
   <div class="row">
     <div class="col-sm-6 ">
-      <div class="container-fluid" style="background-color:#292a24;">
+      <div class="container-fluid" style="background-color:#fff;">
         <div class="row" style="padding:25px">
           <!-- <div class="row"> -->
             <div class="col-sm-9">
@@ -98,7 +98,7 @@
 
     </div>
     <div class="col-sm-6 ">
-      <div class="container-fluid" style="background-color:#292a24;">
+      <div class="container-fluid" style="background-color:#fff;">
         <div class="row" style="padding:25px">
           <!-- <div class="row"> -->
             <div class="col-sm-9">
@@ -120,7 +120,7 @@
   </div>
   <div class="row">
     <div class="col-sm-6">
-      <div class="container-fluid" style="background-color:#292a24;margin-top:20px">
+      <div class="container-fluid" style="background-color:#fff;margin-top:20px">
         <div class="row" style="padding:25px">
           <!-- <div class="row"> -->
             <div class="col-sm-9">
