--- a/PIM/static/ngTemplates/app.home.dashboard.html
+++ b/PIM/static/ngTemplates/app.home.dashboard.html
@@ -1,7 +1,7 @@
-<div class="shaddowed card" style="min-height:93vh;position:relative;background-color:#3e4247">
+<div class="shaddowed card" style="min-height:93vh;position:relative;background-color:#f8f8f8">
 
   <breadcrumb></breadcrumb>
-  <div class="container-fluid" style="color:white">
+  <div class="container-fluid" style="color:black">
 
     <div class="row">
       <div class="col-md-12">
@@ -10,7 +10,7 @@
     </div>
     <div class="row">
       <div class="col-md-6 ">
-        <div class="container-fluid" style="background-color:#292a24;">
+        <div class="container-fluid" style="background-color:#fff;">
           <div class="row" style="padding:25px">
             <div class="row">
               <div class="col-md-6">
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="col-md-6 ">
-        <div class="container-fluid" style="background-color:#292a24;">
+        <div class="container-fluid" style="background-color:#fff;">
           <div class="row" style="padding:25px">
             <div class="row">
               <div class="col-md-12">
@@ -66,7 +66,7 @@
 
     <div class="row" style="margin-top:20px">
       <div class="col-md-6 ">
-        <div class="container-fluid" style="background-color:#292a24;">
+        <div class="container-fluid" style="background-color:#fff;">
           <div class="row" style="padding:25px">
             <div class="row">
               <div class="col-md-6">
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="col-md-6 ">
-        <div class="container-fluid" style="background-color:#292a24;">
+        <div class="container-fluid" style="background-color:#fff;">
           <div class="row" style="padding:25px">
             <div class="row">
               <div class="col-md-6">
@@ -112,7 +112,7 @@
     </div>
     <div class="row">
       <div class="col-md-6 ">
-        <div class="container-fluid" style="background-color:#292a24;">
+        <div class="container-fluid" style="background-color:#fff;">
           <div class="row" style="padding:25px">
             <div class="row">
               <div class="col-md-6">
@@ -129,7 +129,7 @@
             </div>
           </div>
         </div>
-        <div class="container-fluid" style="background-color:#292a24;margin-top:20px">
+        <div class="container-fluid" style="background-color:#fff;margin-top:20px">
           <div class="row" style="padding:25px">
             <div class="row">
               <div class="col-md-6">
@@ -146,7 +146,7 @@
             </div>
           </div>
         </div>
-        <div class="container-fluid" style="background-color:#292a24;margin-top:20px">
+        <div class="container-fluid" style="background-color:#fff;margin-top:20px">
           <div class="row" style="padding:25px">
             <div class="row">
               <div class="col-md-6">
@@ -165,7 +165,7 @@
         </div>
       </div>
       <div class="col-md-6 ">
-        <div class="container-fluid" style="background-color:#292a24;">
+        <div class="container-fluid" style="background-color:#fff;">
           <div class="row" style="padding:25px">
             <div class="row">
               <div class="col-md-12">
