--- a/PIM/static/ngTemplates/app.home.settings.html
+++ b/PIM/static/ngTemplates/app.home.settings.html
@@ -1,13 +1,14 @@
 <div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
-  <div class="container-fluid" style="padding:0px;">
-    <breadcrumb></breadcrumb>
+  <breadcrumb></breadcrumb>
+  <div class="container-fluid" style="padding:15px;">
     <uib-tabset>
       <uib-tab active="searchTabActive">
         <uib-tab-heading>
           Prescripts
           <!-- <i class="fa fa-plus"></i> -->
         </uib-tab-heading>
-        <div style="margin-top:20px;" ng-include="'/static/ngTemplates/module.home.settings.prescripts.html'">
+        <div class="container-fluid">
+          <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table>
         </div>
       </uib-tab>
       <uib-tab>
@@ -15,9 +16,17 @@
           Roles
           <!-- <i class="fa fa-plus"></i> -->
         </uib-tab-heading>
-        <div style="margin-top:20px;" ng-include="'/static/ngTemplates/module.home.settings.roles.html'">
+        <div style="margin-top:20px;" ng-include="'/static/ngTemplates/module.home.settings.roles.html'"></div>
+      </uib-tab>
+      <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
+        <uib-tab-heading>
+          {{tab.title}}
+          <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
+        </uib-tab-heading>
+        <div ng-if="tab.app == 'prescriptInfo'">
+          <div ng-include="'/static/ngTemplates/app.settings.prescript.explore.html'"></div>
         </div>
       </uib-tab>
     </uib-tabset>
-</div>
+  </div>
 </div>
