--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -15,7 +15,7 @@
             </div>
           </div>
           <div class="col-md-4" style="padding:0px">
-            <div class="btn btn-danger btn-sm btn-block" type="button" style="border-radius:0px !important;" name="button" mwl-confirm title="Close Chat" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatClose(index,data.uid,data.chatThreadPk);closed=true"
+            <div class="btn btn-danger btn-sm btn-block" type="button" style="border-radius:0px !important;" name="button" mwl-confirm title="Close Chat" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatClose(index,data.uid,data.chatThreadPk);closed=true"
               confirm-button-type="default" cancel-button-type="default" ng-hide="closed">
               <img style="width:35px;border-radius:10px" src="/static/images/close_chat.png">
             </div>
@@ -71,7 +71,10 @@
 
   <div class="" style="padding:;border-top:30px;margin-right:15px">
     <div class="row" style="margin:0px;margin-top:10px;margin-bottom:5px;padding-top:10px;padding-bottom:10px;">
-      <input ng-if="chatBox.fileToSend.size==0" type="text" class="col-md-9" ng-enter="send()" placeholder="Message" ng-model="chatBox.messageToSend" uib-typeahead="cannedRes.text as cannedRes.text for cannedRes in searchCannedRes($viewValue)" style="border:none;outline:none;background-color:white;">
+      <span class="abcd">
+        <input ng-if="chatBox.fileToSend.size==0" type="text" class="col-md-9" ng-enter="send()" placeholder="Message" ng-model="chatBox.messageToSend" uib-typeahead="cannedRes.text as cannedRes.text for cannedRes in searchCannedRes($viewValue)" data-placement="top" style="border:none;outline:none;background-color:white;">
+      </span>
+
       <input type="file" id="filePickerChat{{index}}" style="display:none;" file-model="chatBox.fileToSend">
 
       <span ng-if="chatBox.fileToSend.size==0" class="col-md-1" style="cursor:pointer;font-size:20px" ng-click="attachFile()"><i class="fa fa-paperclip"  aria-hidden="true"></i></span>
