--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -40,7 +40,6 @@
       </div>
     </div>
   </div>
-
 </div>
 
 
@@ -70,8 +69,8 @@
 <div class="row" style="margin:0px">
   <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding-left:20px;padding-right:40px;">
     <div class="row" ng-if="subSlide.banners.length > 0">
-      <div style="height:45vh;margin-bottom:20px;margin-left:10px;padding-left:0px;padding-right:0px;" class="card col-md-12 text-center  hidden-xs hidden-sm">
-        <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer;height:45vh" ng-src="{{subSlide.img}}" ng-click="$state.go('pages' , {title : subSlide.title.split(' ').join('-').toLowerCase()})" />
+      <div style="height:43vh;margin-left:10px;padding-left:0px;padding-right:0px;overflow:hidden;padding:0px;" class="col-md-12 text-center  hidden-xs hidden-sm">
+        <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer;" ng-src="{{subSlide.img}}" ng-click="$state.go('pages' , {title : subSlide.title.split(' ').join('-').toLowerCase()})" />
       </div>
     </div>
   </div>
