--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -144,13 +144,14 @@
       </li>
     </ul>
   </div> -->
-  <img style="width:100%;cursor:pointer;height:60vh;background-attachment: fixed;background-position: center;position:absolute;z-index:none;" ng-repeat="b in slide.banners" ng-if="$index == slide.active" ng-src="{{b.imagePortrait}}" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"/><br/>
+  <img ng-repeat="b in slide.banners" style="width:100%;cursor:pointer;height:60vh;background-attachment: fixed;background-position: center;position:absolute;z-index:none;background: url('{{b.imagePortrait}}') no-repeat center center;background-size: cover;"  ng-if="$index == slide.active" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"/><br/>
   <div class="col-xs-12" style="padding-left:0px">
     <div class="col-xs-6 text-left" style="margin-left:0px;left:0px;padding-top:8%;padding-left:0px">
-  <button href="#" class="previous round text-right" style="background-color:white;color: black;position:absolute;font-size:25px;padding-right:10px;border:0px white;height:75px" ng-click="change('previous')">&#8249; </button>
+  <button href="#" class="previous round text-right" style="background-color:white;color: black;position:absolute;font-size:50px;padding-right:10px;border:0px white;height:100px; box-shadow: 0px 15px 20px rgba(4, 14, 14, 0.4);border-radius:0px 30px 30px 0px;" ng-click="change('previous')">&#8249; </button>
+
 </div>
   <div class="col-xs-6 text-right" style="margin-left:0px;padding-top:8%;">
-  <button href="#" class="next round text-left" style="background-color: white;color: black;position:absolute;float: left;font-size:25px;padding-right:23px;padding-left:10pxborder:0px white;height:75px"  ng-click="change('next')">&#8250;</button>
+  <button href="#" class="next round text-left" style="background-color: white;color: black;position:absolute;float: left;font-size:50px;padding-right:23px;padding-left:10px;border:0px white;box-shadow: 0px 15px 20px rgba(4, 14, 14, 0.4);height:100px;width:60px;border-radius:30px 0px 0px 30px"  ng-click="change('next')">&#8250;</button>
 </div>
 </div>
 </div>
@@ -214,3 +215,4 @@
 
 </div>
  </div> -->
+
