--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -302,9 +302,9 @@
                   <div class="col-md-6 col-xs-12 col-sm-6  text-center">
                     <h5>{{me.first_name}} {{me.last_name}}</h5>
                   </div>
-                  <div class="col-md-6 col-xs-12 col-sm-6">
+                  <div class="col-md-6 col-xs-12 col-sm-6 text-center">
                     <div class="form-group">
-                      <h5>{{me.profile.number}}</h5>
+                      <h5>{{me.profile.mobile}}</h5>
                       <!-- <input type="text" class="form-control" id="mob" ng-model="data.address.mobile" placeholder="Enter mobile.."> -->
                     </div>
                   </div>
