--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -96,7 +96,7 @@
     </div>
     <div class="col-md-2 text-left">
       <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
-      <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
+      <span style="cursor:pointer" ng-click="contactUs()">Contact Us</span><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-').toLowerCase()})">Careers</span> <br>
       <span style="cursor:pointer" ng-click="feedbackstatus()">Feedback</span><br>
       <!-- <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br> -->
@@ -163,7 +163,7 @@
 
     <div class="col-xs-7 text-center">
       <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
-      <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
+      <span style="cursor:pointer" ng-click="contactUs()">Contact Us</span><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-').toLowerCase()})">Careers</span> <br>
       <span style="cursor:pointer" ng-click="feedbackstatus()">Feedback</span><br>
       <!-- <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br> -->
