--- a/PIM/static/ngTemplates/app.settings.prescript.explore.html
+++ b/PIM/static/ngTemplates/app.settings.prescript.explore.html
@@ -1,6 +1,4 @@
 <div ng-controller="app.settings.prescript.explore">
-
-
   <div class="row" style="padding:15px;">
     <div class="col-md-8 col-md-offset-2">
       <form>
@@ -10,7 +8,7 @@
         </div>
         <div class="input-group">
           <input type="text" class="form-control" ng-model="prescriptForm.text" placeholder="Type your prescript here..">
-          <span class="input-group-addon" style="cursor:pointer" ng-click="createPrescipts()"> <span>{{prescriptForm.pk ? 'Save':'Add'}}</span> </span>
+          <span class="input-group-addon" style="cursor:pointer" ng-click="savePrescript()"> <span>{{prescriptForm.pk ? 'Save':'Add'}}</span> </span>
         </div>
       </form>
     </div>
@@ -19,28 +17,20 @@
   <div class="row " style="padding-top:25px;">
     <div class="col-md-8 col-md-offset-2">
       <div ng-repeat="p in prescripts" style="margin-bottom:15px;">
-        <div class="card" style="background-color:#5555c2; color:white; padding:15px; border-radius:15px;" ng-mouseover="p.display=true" ng-mouseleave="p.display=false">
+        <div class="card" style="background-color:#5555c2; color:white; padding:15px; border-radius:10px;" ng-mouseover="p.display=true" ng-mouseleave="p.display=false">
           <div class="row">
             <div class="col-md-10">
               <span>{{p.text}}</span>
             </div>
             <div class="col-md-1">
-              <span ng-if="p.display" class="pull-right" style="cursor:pointer;" ng-click="deletePrescript(p.pk , $index)"  > <i class="fa fa-trash fa-lg"></i> </span>
+              <span ng-if="p.display" class="pull-right" style="cursor:pointer;" ng-click="deletePrescript(p.pk , $index)"  > <i class="fa fa-trash fa-lg" title="Delete"></i> </span>
             </div>
             <div class="col-md-1">
-              <span ng-if="p.display" class="pull-right" style="cursor:pointer;" ng-click="editPrescript(p)"  > <i class="fa fa-edit fa-lg"></i> </span>
+              <span ng-if="p.display" class="pull-right" style="cursor:pointer;" ng-click="editPrescript(p)"  > <i class="fa fa-edit fa-lg" title="Edit"></i> </span>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-
-
-  <!-- <div class="row" style="padding:15px;">
-    <div class="col-md-6">
-
-    </div>
-  </div>
-</div> -->
+</div>
