--- a/ecommerce/static/ngTemplates/app.ecommerce.account.support.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.support.html
@@ -18,6 +18,10 @@
 
       <hr>
       <h4>Send a message</h4>
+          <div class="form-group">
+        <!-- <label>Subject</label> -->
+        <input ng-model="message.invoiceNo" type="text" class="form-control" placeholder="Invoice Number">
+      </div>
       <div class="form-group">
         <!-- <label>Subject</label> -->
         <input ng-model="message.subject" type="text" class="form-control" placeholder="Subject">
