--- a/ecommerce/static/ngTemplates/app.ecommerce.feedBack.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.feedBack.html
@@ -71,17 +71,24 @@
 <div class="row modal-body">
   <div class="col-md-12">
     <form>
-      <div class="row">
+      <div class="row" ng-if="!me">
         <div class="col-md-6 col-md-offset-3 col-xs-12 col-sm-12 text-center">
           <div class="form-group">
             <input type="email" ng-model="feedback.email" class="form-control" placeholder="Email address">
           </div>
         </div>
         </div>
-        <div class="row">
+        <div class="row" ng-if="!me">
         <div class="col-md-6 col-md-offset-3 col-xs-12 col-sm-12 text-center">
           <div class="form-group">
             <input type="number" ng-model="feedback.mobile" class="form-control" placeholder="Mobile number">
+          </div>
+        </div>
+      </div>
+       <div class="row">
+        <div class="col-md-6 col-md-offset-3 col-xs-12 col-sm-12 text-center">
+          <div class="form-group">
+            <input type="text" ng-model="feedback.subject" class="form-control" placeholder="Subject">
           </div>
         </div>
       </div>
