--- a/POS/static/ngTemplates/app.POS.product.form.html
+++ b/POS/static/ngTemplates/app.POS.product.form.html
@@ -96,7 +96,10 @@
 
     </div>
     <div class="col-md-4">
-
+      <div class="form-group">
+        <label>Alias</label>
+        <input type="text" class="form-control" ng-model="product.alias">
+      </div>
       <div class="form-group">
         <label>Description</label>
         <textarea class="form-control custom-control" rows="3" ng-model="product.description"></textarea>
