--- a/HR/static/ngTemplates/app.HR.form.editPermissions.html
+++ b/HR/static/ngTemplates/app.HR.form.editPermissions.html
@@ -1,7 +1,11 @@
 <div class="container-fluid">
-  <h3>{{tab.title}} </h3>
-  <div class="row">
+  <h3>{{tab.title}}</h3>
+  <div class="row" style="padding:15px;">
     <div class="col-md-6">
+    <div class="form-group" ng-init="role.tabIndex=$index">
+      <label>Select Role</label>
+        <input uib-typeahead="role as role.name for role in roleSearch($viewValue)" ng-model="tab.data.role" type="text" class="form-control" placeholder="Search and select">
+    </div>
       <div class="form-group" >
         <label>Grant application access :</label>
         <tags-input ng-model="tab.data.appsToAdd" add-on-paste="true" add-From-Autocomplete-Only="true" display-property="name">
@@ -11,8 +15,7 @@
     </div>
   </div>
 
-  <div class="row container-fluid">
+  <div class="row container-fluid" style="margin-left:0px;">
     <button type="button" class="btn btn-primary"  ng-click="updateUserPermissions($index)" > Save</button>
   </div>
-
 </div>
