--- a/PIM/static/ngTemplates/app.settings.roles.html
+++ b/PIM/static/ngTemplates/app.settings.roles.html
@@ -33,7 +33,7 @@
               <span><b>Name :</b> {{r.name}}</span>
             </div>
             <div class="row" style="padding:15px; padding-bottom:0px;">
-              <span><b>Applications :</b> <span ng-repeat="a in r.applications track by $index"> <span ng-if="$index<=1"> {{a.name}} </span> <span ng-if="$index==2">...</span>  <span ng-if="$index<r.applications.length-1 && $index<=1">,</span> </span></span>
+              <span><b>Applications :</b> <span ng-repeat="a in r.applications track by $index"><span ng-if="$index<=1"> {{a.name.slice(0,15)}} </span><span ng-if="$index==2">...</span><span ng-if="$index<r.applications.length-1 && $index<=1">,</span></span></span>
             </div>
             <div class="row" style="padding:15px">
               <span class="pull-left" style="cursor:pointer; padding-left:5px;" ng-click="deleteRole(r.pk , $index)"> <i class="fa fa-trash fa-lg" title="Delete Role"></i> </span>
